crates/willikins-providers-buildkite/tests/it/snapshots/it__catalog_parity__buildkite_pipeline_ensure_spec.snap
---
source: crates/willikins-providers-buildkite/tests/it/catalog_parity.rs
assertion_line: 57
expression: "spec_json(BuildkitePipelineEnsure::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Ensure a Buildkite pipeline exists in a cluster, pointed at a GitHub repository.",
  "inputs": {
    "cluster": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteClusterId"
      }
    },
    "org": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteOrg"
      }
    },
    "repo": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "GitHubRepo"
      }
    },
    "slug": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkitePipelineSlug"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteToken"
      }
    }
  },
  "key": [
    "org",
    "slug"
  ],
  "name": "buildkite.pipeline.ensure",
  "outputs": {
    "slug": "BuildkitePipelineSlug",
    "url": "HttpsUrl"
  },
  "pure": false
}
